phaser gravyard work

--- a/_posts/thesis_chapters/2025-6-5-Design_v12.md
+++ b/_posts/thesis_chapters/2025-6-5-Design_v12.md
@@ -121,10 +121,16 @@ Using the terminology of Leontiev [-@leontiev_activity_2009], Toby can be seen u
 
 
 
-
 ## Narrative exploration of key areas of contradictions emerging in the game-making learning design (in P1 /P2?)
 
-In line with the theoretical framing established in Chapter 3, contradictions are understood as historically and structurally embedded misalignments between elements of an activity system, often made visible during periods of change or innovation . Following Kuutti [-@kuutti_activity_1995] and Engeström [-@engestrom_activity_1999], tensions, barriers, and disruptions in practice are treated as surface-level manifestations of deeper contradictions within and between activity systems [@engestrom_discursive_2011]. These may take the form of technical difficulties, motivational conflicts, or mismatches between participant expectations and the tools or rules shaping the activity. The following sections of this chapter examine three key areas of contradiction within this 3GAT framework. The first addresses tensions arising from the introduction and evolution of technical tools in the learning design, particularly the shift in software practices between P1 and P2. The second focuses on contradictions related to navigation and supporting documentation during P2. The third explores cultural and identity-based tensions in coding participation, an area highlighted in earlier chapters as a persistent barrier to inclusion.
+In line with the theoretical framing established in Chapter 3, contradictions are understood as historically and structurally embedded misalignments between elements of an activity system, often made visible during periods of change or innovation . Following Kuutti [-@kuutti_activity_1995] and Engeström [-@engestrom_activity_1999], tensions, barriers, and disruptions in practice are treated as surface-level manifestations of deeper contradictions within and between activity systems [@engestrom_discursive_2011]. These may take the form of technical difficulties, motivational conflicts, or mismatches between participant expectations and the tools or rules shaping the activity. The following sections of this chapter examine three key areas of contradiction within this 3GAT framework. As the phases of design are referred to frequently Figure 5.x is included as a reminder.
+
+![](./Pictures/phases_diagram_chevrons_3.png){width=98%}
+
+Figure. 5.x Reminder  of delivery phases and development periods
+
+
+The first section addresses tensions arising from the introduction and evolution of technical tools in the learning design, particularly the shift in software practices between P1 and P2. The second focuses on contradictions related to navigation and supporting documentation during P2. The third explores cultural and identity-based tensions in coding participation, an area highlighted in earlier chapters as a persistent barrier to inclusion.
 
 ### Contradiction area 1: involving organisational issues and the use of game programming and asset authoring tools
 
@@ -132,9 +138,23 @@ In line with the theoretical framing established in Chapter 3, contradictions ar
 
 As a recap from Chapter 4, Phase 1 (P1) was exploratory, while Phase 2 (P2) marked the first full implementation using introduced resources. In this section, I draw on journal notes and participant feedback to describe the emergence of key tensions in kickstarting participant game design activity and the subsequent evolution in tool use across these phases.
 
-My initial focus in the early stages of P1 was to create a welcoming, low-pressure environment for introducing and exploring the process of making games. To achieve this, I used several activities unrelated to computer coding to scaffold the game design process. Early sessions included playing and discussing retro arcade games, analysing their components, brainstorming game story scenarios, creating pixel-art characters on paper, and making craft collages representing game levels. These multimodal and low-tech activities helped surface ideas, supported collaborative group dynamics, and eased participants into the creative space without the pressure of unfamiliar digital tools.
+My initial focus in the early stages of P1 was to create a welcoming, low-pressure environment for introducing and exploring the process of making games. To achieve this, I used several activities unrelated to computer coding to scaffold the game design process [^nc].
 
-Groups formed organically, often along family lines, and began to define their game ideas. Each group had access to a laptop with vintage games installed and a custom URL pointing to a basic JavaScript game template. I postponed introducing code editing tools until around week five, prompted by concerns about overwhelming participants and creating early barriers to engagement. When introduced, the JavaScript editor exposed learners to raw code, without the abstraction or constraint of block-based interfaces. This decision reflected my wariness of oversimplified tools and desire to support authentic engagement with real code [@chesterman_webmaking_2015].
+Each family had access to a laptop with vintage games installed and early sessions included time to play and discussing retro arcade games, describing their component parts in particular. Groups formed organically, often along family lines,  with three, mixed age groups of roughly five participants forming. These groups began to define their game ideas during these early relatively unstructured planning sessions, activities included: brainstorming game story scenarios, creating pixel-art characters on paper, and making craft collages for game backgrounds.
+
+I postponed introducing code editing tools until around week five, prompted by concerns about overwhelming participants and my own ability to support unstructured coding from first principles. I 
+
+
+
+When introduced, the code playground editor exposed learners to raw code, without the structural support provided by block-based interfaces.
+
+This decision reflected my desire to support authentic engagement with real code [@chesterman_webmaking_2015].
+
+![](./Pictures/simple_codeplayground_1.png){width=95%}
+
+Figure 5.x - Simple breakdown of code playground areas.
+
+Both code playground tools in P1-3 shared a similar layout which is common to code playgrounds in general.
 
 #### Surfaced tensions and framed contradiction
 
@@ -147,6 +167,7 @@ At the same time, my own ability to support participants became a limiting facto
 
 
 These tensions reveal a primary contradiction in the activity system between the object of creating expressive, technically functioning games and the mediating means available to support that object. The use of authentic text-based code was intended to foster real engagement with programming, but in practice it created a misalignment between participants’ ambitions, their actual skill levels, and the support structures in place. Tool mediation fell short of enabling meaningful progression, particularly for novices unfamiliar with syntax or programming logic. At the same time, the informal division of labour, based on a single facilitator and loosely defined group roles, proved insufficient to sustain progress across diverse learner needs. Rather than enabling expansive learning, the interaction between tools, subject, and division of labour produced friction and delay. This contradiction pointed to the need for redesigned scaffolding in P2 that could better support the object of creative game development.
+
 
 
 #### Design response
@@ -332,19 +353,21 @@ These elements were themed in a way which aligned with the MDA (mechanics, dynam
 
 <!-- NOTE - DEVELOP THIS A BIT AS IT IS EXPLORED IN CHAPTER 6. -->
 
-#### Brief observations on impact
+#### Brief analysis
 
-The highlighted affordances of the template and the accompanying collection of code examples, as outlined in earlier sections, proved impactful. Despite their relative simplicity, these tools facilitated the creation of games with diverse and complex styles and themes, even at early stages.
+The structuring of the collection of code examples, as outlined in were developed in response to requests for new features from participants, aligning with a shared motivation to encourage diverse learner pathways. Video data collected documents the creation of games with diverse and complex styles and themes [^11a]. These issues are discussed in more detail in relation to the development of participant agency in Chapter 7. Discussion on how the development of these supporting resources interacted with the core template contributes to research on Microworld environments and the UMC framework is continued in the final dicussion section of this chapter.
 
-While the code snippets, practical instructions, and chapters on core principles continued to pose some challenges (as seen in Vignette 6.1), the video data analysed in the following chapter shows an increase in participants’ practical ability to implement game features. The impact of the of choice-driven pathway and the ability for participants to input into the learning design through requests for new features is discussed in more detail in relation to the development of participant agency in Chapter 7.
+<!-- While the code snippets, practical instructions, and chapters on core principles continued to pose some challenges (as seen in Vignette 6.1),
+the video data analysed in the following chapter shows an increase in participants’ practical ability to implement game features.  -->
 
-LINK TO NEXT SECTION?
 
 ### Contradiction area 3: tensions and barriers in cultural aspects of the game-making activity
 
 #### Description of what happened
 
 At times in the interventions, in line with existing research [^12], some participants experienced alienation from the process of coding. This section explores this process through the lens of a key transition in Phase 1.  Early in Phase 1, I had incorporated several non-coding techniques to foster positive affect and create an inclusive idioculture. These included: playing and analysing retro arcade and console games, drama games as session warm ups, a process drama [^13], sketching pixel art on paper, digital pixel art creation, loosely structured ideation sessions to decide on themes, and sessions on music making and audio effects creation using accessible tools. While this wide diversity of activities was later streamlined for later phases [^14], the initial impact of these more accessible creative on the general culture of the group appeared positive in line with existing research [kafai][peppler].  
+
+<!-- MOVEDEarly sessions included playing and discussing retro arcade games, analysing their components, brainstorming game story scenarios, creating pixel-art characters on paper, and making craft collages representing game levels. These multimodal and low-tech activities helped surface ideas, supported collaborative group dynamics, and eased participants into the creative space without the pressure of unfamiliar digital tools. -->
 
 Some participants experienced a sense of exclusion from the culture of the group during the transition from these initial activities to coding: a process now illustrated using a case study of one family. The family consisted of Anastasia, the mother, and her two daughters, one at the lower end of our 8-12 age range and one at the upper end. Members of this family actively participated in non-coding activities, tensions emerged when the introduced coding framework was introduced and the limitations became clearer. The framework of a two dimensional game did not support a key gameplay idea that the younger child had imagined in the previous ideation stage: specifically a exploring a three dimensional landscape from the point of view of a bee avatar [^15]. This realisation was very upsetting to the child and required extensive negotiation with Anastasia leading and myself contributing to a process of explaining the limitations of our beginners coding course.  At a later stage of Phase 1 the whole family experienced alienation. As the phase had progressed, an organic division of labour had occurred with some members sticking with graphical and audio asset creation and others working on incorporating these assets and ideas into the code framework. As session progressed there was progressively less for the non-coders to do. During participant feedback, Anastasia shared that in one session they had arrived a little late, and after observing other participants around them immersed in problem solving using text code tools, felt like they were surrounded by a process of _hardcore coding_ (participants phrase) that felt disconnected from.
 
@@ -386,16 +409,14 @@ As previously outlined, the introduction of a half-baked game template in Phase 
 
 In addition, the structuring of resources around an episodic process of applying one GDP after another, shifted the pattern of the design process away from a design-build-test progression in a way which allowed for more ongoing balance between coding and non-coding activities.
 
+WHERE ELSE IS PLAYTESTING COVERED? HOW TO LINK - CONCEPTS OF FLOW AND ENGAGEMENT
 
 The provision of a working base project also increased the time participants spent playtesting both their own and others’ games. Video data captured instances where participants expressed frustration when errors rendered their games unplayable (see Vignette 6.1), and these moments became triggers for collaboration. In response, I prioritised timely support to ensure games remained functional and playable. By the middle of P2, playtesting had evolved into a key site of peer exchange, prompting spontaneous sharing of advice, assets, and fixes. Observing this, I recognised the potential of these interactions and, in preparation for P3, began to intervene more gently and strategically to nurture these emergent practices of social coding and mutual aid.
 
 
-#### PERHAPS DROP? SHIFT FROM THIS SECTION?
-
-The highlighted affordances of the template and the accompanying collection of code examples proved impactful. Despite their simplicity, these resources facilitated the creation of games with diverse and complex styles and themes.
-
-
 ##### Use of side missions to encourage varied creative practices
+
+CROSS REFERENCE THIS WITH APPENDIX AND CHAPTER 7 - IDENTITIES IN PARTICULAR
 
 In P3, I introduced a light narrative framework to scaffold participant engagement. This took the form of a fictional scenario in which an alien contacted the group and asked for games to assess the worth of the human race (see Vignette 5.alien). Within this scenario, participants were assigned printed side missions — some social and some secret — that encouraged interaction, exploration, and humour. These missions often involved behaviours not directly related to game creation, such as observing others’ games or making subtle, playful changes to someone else’s project.
 
@@ -409,15 +430,21 @@ In P3, I introduced a light narrative framework to scaffold participant engageme
 
 The side missions were designed to support playful social dynamics and to foster a sense of shared community. By encouraging participants to engage with others’ work in imaginative ways, they helped shift the focus away from individual technical mastery and towards relational creativity. In line with third-generation activity theory, these missions acted as secondary stimuli that restructured the activity context and opened up new pathways for agency development. They positioned observation, playfulness, and curiosity as legitimate ways of participating, helping to validate roles beyond that of the coder.
 
-While this section presents only a partial account of the missions and the drama-based approach, their inclusion in the design was a response to the contradictions described above. A more detailed exploration of how these elements contributed to the development of agency is provided in Chapter 7. Within the broader CHAT–DBR framework of this thesis, these missions can be understood as design artefacts that mediated both cultural and affective engagement, making space for diverse learners to see themselves as legitimate participants in the evolving game-making community.
+icipants in the evolving game-making community.
 
+<!-- #### SUMMARY AND LINK
 
+While this provides an incomplete picture of the missions and drama process, due to space limitations, these side missions are presented in this chapter to offer an overview of the varied tools used.
 
-#### SUMMARY AND LINK
+A more detailed exploration of the development of participant agency in relation to these social missions and playtesting is provided in Chapter 7. -->
 
-While this provides an incomplete picture of the missions and drama process, due to space limitations, these side missions are presented in this chapter to offer an overview of the varied tools used. A more detailed exploration of the development of participant agency in relation to these social missions and playtesting is provided in Chapter 7.
+#### Brief Analysis
+
+While this section presents only a partial account of the missions and the drama-based approach [footnote & appendix ], their inclusion in the design was a response to the contradictions described above. A more detailed exploration of how these elements contributed to the development of agency is provided in Chapter 7. Within the broader CHAT–DBR framework of this thesis, these missions can be understood as design artefacts that mediated both cultural and affective engagement, making space for diverse learners to see themselves as legitimate part
 
 MORE SIGNPOSTING? Chapter 7 focuses on analysing participant reactions to the design from a more cultural perspective in greater depth,
+
+Therefore, while this section has shown the importance of cultural factors in the activity, and thus in responsive design decisions, for the remainder of this chapter I return to discuss the findings in relation to existing research addressing technical / structural elements of the learning design to do with software tool use and supporting documentation.  
 
 ## Chapter Discussion
 
@@ -555,6 +582,8 @@ Gilbert is the worsted name.
 
 [^2]: these tools are explored in a following section and include: a web-based coding tool (code playground), a game template that serves as the base for his game project, and a menu of documentation linking to code examples and tutorials.
 
+[^nc]: These low-tech activities involving diverse non-coding processes helped surface ideas, supported collaborative group dynamics, and eased participants into the creative space without the pressure of unfamiliar digital tools. They are described in more detail in section C3 later in this chapter.
+
 [^3]: Playtesting is described in Chapter 2 as
 
 [^4]: Code playgrounds, as described in Chapter 2, are online environments used to test, share or invite help from online users on complete or partial code projects or problems, primarily for web-based project involving the technologies of HTML, CSS and variations of JavaScript (for more detail see Appendix 5.tech)
@@ -572,6 +601,8 @@ Gilbert is the worsted name.
 [^10]: Mark and Ed described themselves as plodding throught that step by step documentations in Vignette ?
 
 [^11]: The evolution and of this theming is outlined in more detail in Appendix 5.theming
+
+[^11a]: Evidence of this diversity is present in Chapter 6 and in the Vignette data in Appendix.V.
 
 [^12]: Research by Kafai, Burke and Peppler in particular on varied approaches to address alienation to coding games has been explored in Chapter 2.
 
