--- a/_posts/thesis_chapters/2025-6-5-Design_v12.md
+++ b/_posts/thesis_chapters/2025-6-5-Design_v12.md
@@ -142,13 +142,12 @@ My initial focus in the early stages of P1 was to create a welcoming, low-pressu
 
 Each family had access to a laptop with vintage games installed and early sessions included time to play and discussing retro arcade games, describing their component parts in particular. Groups formed organically, often along family lines,  with three, mixed age groups of roughly five participants forming. These groups began to define their game ideas during these early relatively unstructured planning sessions, activities included: brainstorming game story scenarios, creating pixel-art characters on paper, and making craft collages for game backgrounds.
 
-I postponed introducing code editing tools until around week five, prompted by concerns about overwhelming participants and my own ability to support unstructured coding from first principles. I 
+I postponed introducing code editing tools until around week five, prompted by concerns about overwhelming participants and my own ability to support unstructured coding from first principles. The given template is simple including just a character, ground, a hazard to avoid and a star to collect. Illustrating some of the common tropes of a simple retro platform game [footnote -to appendix].
 
+When introduced, the code playground editor exposed learners to raw code, without the structural support provided by block-based interfaces. This decision reflected my desire to support authentic engagement with real code [@chesterman_webmaking_2015].
 
-
-When introduced, the code playground editor exposed learners to raw code, without the structural support provided by block-based interfaces.
-
-This decision reflected my desire to support authentic engagement with real code [@chesterman_webmaking_2015].
+Even so all of the barriers associated with text coding now came into focus for these particpants and myself as a facilitator. The use of the code playground did help ameliorate some of these barriers. A brief summary follows and is supplemented by an appendix entry [codeplayground]
+ADD AND LINK THIS 
 
 ![](./Pictures/simple_codeplayground_1.png){width=95%}
 
