--- a/_posts/thesis_chapters/2025-6-5-Design_v12.md
+++ b/_posts/thesis_chapters/2025-6-5-Design_v12.md
@@ -136,33 +136,35 @@ The first section addresses tensions arising from the introduction and evolution
 
 #### Description of what happened
 
-As a recap from Chapter 4, Phase 1 (P1) was exploratory, while Phase 2 (P2) marked the first full implementation using introduced resources. In this section, I draw on journal notes and participant feedback to describe the emergence of key tensions in kickstarting participant game design activity and the subsequent evolution in tool use across these phases.
+In this section, I analyse journal notes, participant feedback, and the changes in the tools and resources used between P1 and P2 [] (P1 was exploratory, while P2 marked the first full implementation using introduced resources) to describe the emergence of key tensions in the process of game design activity. Initial expectations had been set via email communication inviting participation and describing the proposed workshop activities [^ie].
 
-My initial focus in the early stages of P1 was to create a welcoming, low-pressure environment for introducing and exploring the process of making games. To achieve this, I used several activities unrelated to computer coding to scaffold the game design process [^nc].
+In the early stages of P1, groups formed organically, often along family lines, with three, mixed age groups of roughly five participants forming. These groups began to define their game ideas during these early relatively unstructured planning sessions. My initial focus was to create a welcoming, low-pressure environment for introducing and exploring the process of making games in a way which allowed participants to follow their own interests [^ap]. To achieve this, I used several activities unrelated to computer coding to scaffold the game design process [^nc]. Each family had access to a laptop with vintage games installed and early sessions included time to play and discussing retro arcade games, describing their component parts in particular. Other activities included: brainstorming game story scenarios, creating pixel-art characters on paper, and making craft collages for game backgrounds.
 
-Each family had access to a laptop with vintage games installed and early sessions included time to play and discussing retro arcade games, describing their component parts in particular. Groups formed organically, often along family lines,  with three, mixed age groups of roughly five participants forming. These groups began to define their game ideas during these early relatively unstructured planning sessions, activities included: brainstorming game story scenarios, creating pixel-art characters on paper, and making craft collages for game backgrounds.
+I postponed introducing code editing tools until around week five, prompted by concerns about overwhelming participants and my own ability to support unstructured coding from first principles [^fp]. At this stage I introduced a simplified game template including just a character, ground, a hazard to avoid and a star to collect, illustrating some of the common tropes of a simple retro platform game [^cp].
 
-I postponed introducing code editing tools until around week five, prompted by concerns about overwhelming participants and my own ability to support unstructured coding from first principles. The given template is simple including just a character, ground, a hazard to avoid and a star to collect. Illustrating some of the common tropes of a simple retro platform game [footnote -to appendix].
-
-When introduced, the code playground editor exposed learners to raw code, without the structural support provided by block-based interfaces. This decision reflected my desire to support authentic engagement with real code [@chesterman_webmaking_2015].
-
-Even so all of the barriers associated with text coding now came into focus for these particpants and myself as a facilitator. The use of the code playground did help ameliorate some of these barriers. A brief summary follows and is supplemented by an appendix entry [codeplayground]
-ADD AND LINK THIS 
+The code playground tool proved initially productive in scaffolding the beginning coding experience of participants of HTML5 games [^ht].
+Both code playground tools in P1-3 shared a similar layout which is common to code playgrounds in general.
 
 ![](./Pictures/simple_codeplayground_1.png){width=95%}
 
 Figure 5.x - Simple breakdown of code playground areas.
 
-Both code playground tools in P1-3 shared a similar layout which is common to code playgrounds in general.
+The three areas shown in Figure 5.x represent a visual and technical structuring of a web project. [Appendix?]
+
+This decision reflected my desire to support authentic engagement with real code [@chesterman_webmaking_2015]. While the affordances of the code playground ameliorated some of the barriers associated with text coding [^bb], challenges remained for P1 participants.
+
 
 #### Surfaced tensions and framed contradiction
 
-When participants began engaging with code, several tensions quickly surfaced. Many learners had ambitious ideas for their projects including AI-driven enemies and 3D landscapes that were beyond realistic scope of the novice programme. Some became frustrated when their expectations did not align with what was technically possible or comprehensible (INPUT EVIDENCE). Others shifted focus away from programming altogether, contributing instead through narrative or asset design.
+When participants began engaging with code, several tensions quickly surfaced. While simplified, the structure of the starting template was still relatively complex at first glance and offered no easy way into experimentation as advocated by a tinkering or bricolage approach [^br]. Many learners had ambitious ideas for their projects including that were beyond realistic scope of the novice programme [^ab].
 
-At the same time, my own ability to support participants became a limiting factor. While I had prepared a structural starter code in P1, learners frequently needed one-to-one help to make even minor edits. Whole-group demonstrations were largely ineffective: attention drifted, and groups progressed at different speeds and needed different support at different stages. As a result, support bottlenecks emerged, and some participants became stalled early in their projects. My journal notes describe these sessions as increasingly difficult to manage. The use of authentic text code rather than a block coding approach aggravated this tension. Without in-tool help or the supporting structure provided by block coding environments participants had no external supports to draw upon. They relied on me as the primary source of information, further exacerbating the facilitator workload.  While some learners began copying each other's code snippets, misunderstandings remained widespread.
+While some participants remained focused on activities other than programming (e.g. narrative or asset design), others stepped forward to engage with the coding. At this point, my ability to support participants became a limiting factor. Given the limitations of the structural starter code, learners frequently needed one-to-one help to make even minor edits. Whole-group demonstrations were largely ineffective: attention drifted, and groups progressed at different speeds and needed different support at different stages. As a result, support bottlenecks emerged, and some participants became stalled early in their projects. My journal notes describe these sessions as increasingly difficult to manage.
+
+The use of authentic text code rather than a block coding approach aggravated this tension. Without in-tool help or the supporting structure provided by block coding environments participants had no external supports to draw upon. They relied on me as the primary source of information, further exacerbating the facilitator workload.  While some learners began copying each other's code snippets, misunderstandings remained widespread.
 
 
-![Figure 5.C1: Representation of emerging areas of contradictions in mid-P1 game making process](./Pictures/At_tension_1_v2.png){width=95%}
+![Figure 5.C1: Representation of emerging areas of contradictions in mid-P1 game making process](./Pictures/At_tension_1_v3.png){width=75%}
+
 
 
 These tensions reveal a primary contradiction in the activity system between the object of creating expressive, technically functioning games and the mediating means available to support that object. The use of authentic text-based code was intended to foster real engagement with programming, but in practice it created a misalignment between participants’ ambitions, their actual skill levels, and the support structures in place. Tool mediation fell short of enabling meaningful progression, particularly for novices unfamiliar with syntax or programming logic. At the same time, the informal division of labour, based on a single facilitator and loosely defined group roles, proved insufficient to sustain progress across diverse learner needs. Rather than enabling expansive learning, the interaction between tools, subject, and division of labour produced friction and delay. This contradiction pointed to the need for redesigned scaffolding in P2 that could better support the object of creative game development.
@@ -581,7 +583,23 @@ Gilbert is the worsted name.
 
 [^2]: these tools are explored in a following section and include: a web-based coding tool (code playground), a game template that serves as the base for his game project, and a menu of documentation linking to code examples and tutorials.
 
+[^ie]: The invite email is included within Appendix A and included an invitation broadly for "families to take part in a Game Making club to learn how to make video games together". The expectation of parent being involved in the making process was revisited in the first session.
+
+[^ap]: At this early stage, I termed this process following _affinity paths_, imagining some would be drawn to artwork, some to music creation and others to code problems solving.
+
 [^nc]: These low-tech activities involving diverse non-coding processes helped surface ideas, supported collaborative group dynamics, and eased participants into the creative space without the pressure of unfamiliar digital tools. They are described in more detail in section C3 later in this chapter.
+
+[^fp]: Reflections on this delay are included in Appendix D.1.a and reflect a convergence of my own tacit expectations to begin from first principles and my relative inexperience working in this area.
+
+[cp:] As of October 2025 it is still available to view and play - https://codepen.io/mrmick/pen/jaXzxw?editors=0010.
+
+[^ht]: The term HTML5 games is included here as it was relevant at the time. HTML5 became a buzzword for modern webpages which included dynamic content due to the presence of JavaScript and css technology.
+
+[^bb:] See Chapter 2 for a full summary of the challenges of text coding and the ways code playground address them. Appendix D.1 gives more detail of my evaluation of the advantages of code playgrounds.
+
+[^br]: See Chapter 2 for outlines of tinkering [@] or bricolage approaches [@bevan_learning_2015; @papert_epistemological_1990].
+
+[^ab]: See appendix bee for an example.
 
 [^3]: Playtesting is described in Chapter 2 as
 
