--- a/_posts/thesis_chapters/2025-6-5-Design_v12.md
+++ b/_posts/thesis_chapters/2025-6-5-Design_v12.md
@@ -140,6 +140,8 @@ In this section, I analyse journal notes, participant feedback, and the changes 
 
 In the early stages of P1, groups formed organically, often along family lines, with three, mixed age groups of roughly five participants forming. These groups began to define their game ideas during these early relatively unstructured planning sessions. My initial focus was to create a welcoming, low-pressure environment for introducing and exploring the process of making games in a way which allowed participants to follow their own interests [^ap]. To achieve this, I used several activities unrelated to computer coding to scaffold the game design process [^nc]. Each family had access to a laptop with vintage games installed and early sessions included time to play and discussing retro arcade games, describing their component parts in particular. Other activities included: brainstorming game story scenarios, creating pixel-art characters on paper, and making craft collages for game backgrounds.
 
+CHOICE OF PHASER AND JavaScript
+
 I postponed introducing code editing tools until around week five, prompted by concerns about overwhelming participants and my own ability to support unstructured coding from first principles [^fp]. At this stage I introduced a simplified game template including just a character, ground, a hazard to avoid and a star to collect, illustrating some of the common tropes of a simple retro platform game [^cp].
 
 The code playground tool proved initially productive in scaffolding the beginning coding experience of participants of HTML5 games [^ht].
@@ -156,20 +158,14 @@ This decision reflected my desire to support authentic engagement with real code
 
 #### Surfaced tensions and framed contradiction
 
-When participants began engaging with code, several tensions quickly surfaced. While simplified, the structure of the starting template was still relatively complex at first glance and offered no easy way into experimentation as advocated by a tinkering or bricolage approach [^br]. Many learners had ambitious ideas for their projects including that were beyond realistic scope of the novice programme [^ab].
+When participants began engaging with code, several tensions quickly surfaced. The gap between participants’ desired game features and their inability to implement them in code led groups to specialise. Some participants with greater confidence or experience took on coding tasks, while others worked on graphical game assets (both digital and physical), narrative planning, or sound elements [^sp]. At this point, my ability to support participants undertaking coding activities became a limiting factor. Given the limitations of the structural starter code, learners frequently needed one-to-one help to make even minor edits. Whole-group demonstrations were largely ineffective: attention drifted, and groups progressed at different speeds and needed different support at different stages.  Without in-tool help or the supporting affordances provided by block coding environments participants had no  supports to draw upon. They relied on me as the primary source of information, further exacerbating the facilitator workload. As a result, support bottlenecks emerged, and some participants became stalled early in their projects. My journal notes describe these sessions as increasingly difficult to manage.
 
-While some participants remained focused on activities other than programming (e.g. narrative or asset design), others stepped forward to engage with the coding. At this point, my ability to support participants became a limiting factor. Given the limitations of the structural starter code, learners frequently needed one-to-one help to make even minor edits. Whole-group demonstrations were largely ineffective: attention drifted, and groups progressed at different speeds and needed different support at different stages. As a result, support bottlenecks emerged, and some participants became stalled early in their projects. My journal notes describe these sessions as increasingly difficult to manage.
-
-The use of authentic text code rather than a block coding approach aggravated this tension. Without in-tool help or the supporting structure provided by block coding environments participants had no external supports to draw upon. They relied on me as the primary source of information, further exacerbating the facilitator workload.  While some learners began copying each other's code snippets, misunderstandings remained widespread.
+The use of professional text-code language and framework, driven by  rather than a block coding approach created additional tensions. While simplified, the structure of the starting template was still relatively complex at first glance and offered no easy way into experimentation as advocated by a tinkering or bricolage approach [^br]. Many learners had ambitious ideas for their projects including that were beyond realistic scope of the novice programme [^ab]. Regarding peer learning, while some learners became aware of each other's programming work, it was difficult to adapt the bespoke code additions from one project to another.
 
 
-![Figure 5.C1: Representation of emerging areas of contradictions in mid-P1 game making process](./Pictures/At_tension_1_v3.png){width=75%}
+![Figure 5.x: Representation of emerging areas of contradictions in mid-P1 game making process](./Pictures/At_tension_1_v3.png){width=75%}
 
-
-
-These tensions reveal a primary contradiction in the activity system between the object of creating expressive, technically functioning games and the mediating means available to support that object. The use of authentic text-based code was intended to foster real engagement with programming, but in practice it created a misalignment between participants’ ambitions, their actual skill levels, and the support structures in place. Tool mediation fell short of enabling meaningful progression, particularly for novices unfamiliar with syntax or programming logic. At the same time, the informal division of labour, based on a single facilitator and loosely defined group roles, proved insufficient to sustain progress across diverse learner needs. Rather than enabling expansive learning, the interaction between tools, subject, and division of labour produced friction and delay. This contradiction pointed to the need for redesigned scaffolding in P2 that could better support the object of creative game development.
-
-
+These tensions reveal an underlying contradiction in the activity system between the object of creating expressive, technically functioning games and the mediating means available to support that objective shown in Figure 5.x. In summary, the use of authentic text-based code environment, aggravated a misalignment between participants’ ambitions, their actual skill levels, and the support structures in place within the software toolset. At the same time, the mediational role of a single facilitator proved insufficient to sustain a good level progress within project work and to support diverse learner needs, resulting in friction and delay. This contradiction pointed to the need for redesigned tool scaffolding before P2 that could better support the object of creative game development.
 
 #### Design response
 
@@ -596,6 +592,8 @@ Gilbert is the worsted name.
 [^ht]: The term HTML5 games is included here as it was relevant at the time. HTML5 became a buzzword for modern webpages which included dynamic content due to the presence of JavaScript and css technology.
 
 [^bb:] See Chapter 2 for a full summary of the challenges of text coding and the ways code playground address them. Appendix D.1 gives more detail of my evaluation of the advantages of code playgrounds.
+
+[^sp]: While I wanted participants to be able to follow their interests, this total dis-enagement with coding was not optimal as we will see in section C3.
 
 [^br]: See Chapter 2 for outlines of tinkering [@] or bricolage approaches [@bevan_learning_2015; @papert_epistemological_1990].
 
